# lm-notes

./: LICENSE  README.md  docker-compose.yml  drizzle.config.ts  package.json  pnpm-lock.yaml
api/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
api/app/: main.py  rag_agent.py
lmnotes/: Dockerfile.frontend  README.md  package.json  pnpm-lock.yaml
lmnotes/src/: env.ts
lmnotes/src/app/: page.tsx
lmnotes/src/app/api/chat/: route.ts
lmnotes/src/components/: add-source-dialog.tsx  chat-input.tsx  chat.tsx  create-notebook-dialog.tsx  emoji-picker.tsx  notebook-card.tsx  notebook-dialog.tsx  notebook-form.tsx  notebook-layout.tsx
lmnotes/src/components/assistant-ui/: markdown-text.tsx  thread.tsx
lmnotes/src/lib/actions/: notebooks.ts
lmnotes/src/lib/db/: schema.ts
lmnotes/src/lib/validations/: notebook.ts  source.ts
src/app/: layout.tsx  page.tsx
src/app/chat/: page.tsx
src/app/notebook/[id]/: page.tsx
src/components/: chat-message.tsx  chat.tsx  notebook-layout.tsx
src/components/ui/: dropdown-menu.tsx
src/lib/actions/: notebooks.ts  sources.ts
src/lib/db/: schema.ts
src/lib/validations/: notebook.ts
web/: .env.example  Dockerfile  docker-entrypoint.sh
web/src/: env.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/api/chat/: route.ts
web/src/app/notebook/[id]/: page.tsx
web/src/components/: emoji-picker.tsx  nav-header.tsx  notebook-layout.tsx  theme-toggle.tsx
web/src/lib/actions/: notebooks.ts  sources.ts
web/src/lib/db/: index.ts  schema.ts  types.ts
web/src/lib/validations/: notebook.ts
